add core default css

--- a/.gitignore
+++ b/.gitignore
@@ -16,32 +16,20 @@
 /Dockerfile
 /appsettings.json
 /appsettings.Development.json
-/wartermark.png
-/wartermark-logo.svg
-/wartermark-ecomerce.png
 /site.webmanifest
 /safari-pinned-tab.svg
 /push-service-worker.min.js
 /push-service-worker.js
-/mstile-70x70.png
-/mstile-310x310.png
-/mstile-310x150.png
-/mstile-150x150.png
-/mstile-144x144.png
-/logo.svg
-/favicon.ico
-/favicon-32x32.png
-/favicon-16x16.png
-/browserconfig.xml
-/apple-touch-icon.png
-/android-chrome-512x512.png
-/android-chrome-192x192.png
-/5d9d5ccfcbfd216240d2c1ff-428-269.png
-/5d9d5ccfcbfd216240d2c1ff-233-146.png
-/5c9057a749697a334476a03c-428-229.png
-/5c9057a749697a334476a03c-233-124.png
+/*.png
+/*.svg
+/*.xml
+/*.ico
+/*.txt
 /sass
-/css
+/css/*
+!/css/CommerceDefault
+/css/CommerceDefault/*
+!/css/CommerceDefault/*.min.css
 /js
 /ourlib
 /productfeeds
